# shamir_secretsharing

./: Cargo.toml  README.md
src/: main.rs  sss.rs  utils.rs
