[package]
name = "sss"
version = "0.1.0"
edition = "2021"

[dependencies]
num-bigint = "0.4.6"
num-traits = "0.2.19"
rand = "0.6"
num-primes = "0.3.0"
num = { version = "0.2", features = ["rand"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.132"
once_cell = "1.20.2"
base64 = "0.22.1"
